--- a/package.json
+++ b/package.json
@@ -1,97 +1,125 @@
 {
   "name": "@secjs/exceptions",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
-  },
+  "license": "MIT",
+  "author": "João Lenon",
+  "repository": "https://github.com/SecJS/Exceptions.git",
+  "bugs": "https://github.com/SecJS/Exceptions/issues",
+  "homepage": "https://github.com/SecJS/Exceptions#readme",
   "scripts": {
-    "mrm": "mrm --preset=@adonisjs/mrm-preset",
-    "pretest": "yarn lint",
-    "test": "node japaFile.js",
-    "clean": "del build",
-    "compile": "yarn lint && yarn clean && tsc",
-    "build": "yarn compile",
-    "prepublishOnly": "yarn build",
-    "coverage": "nyc --reporter=lcov --reporter=text --clean node japaFile.js && http-server test/coverage/lcov-report",
-    "ci-test": "nyc --reporter=text-summary --clean node japaFile.js",
-    "lint": "eslint ./src --ext=.ts",
-    "lint:fix": "eslint ./src --fix --ext=.ts",
-    "dev": "tsc --watch",
-    "commit": "git-cz",
-    "release": "np",
-    "version": "yarn build"
+    "build": "tsc",
+    "test": "jest --verbose",
+    "test:debug": "DEBUG=* jest --verbose",
+    "lint:fix": "eslint ./src --fix --ext=.ts"
   },
   "dependencies": {},
   "devDependencies": {
-    "@adonisjs/mrm-preset": "2.0.3",
-    "@secjs/responses": "^1.0.0",
-    "@types/cls-hooked": "^4.3.0",
-    "@types/express": "^4.17.7",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.154",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
-    "cls-hooked": "^4.2.2",
-    "commitizen": "^4.0.4",
-    "cz-conventional-changelog": "^3.1.0",
-    "del-cli": "^3.0.0",
-    "doctoc": "^1.4.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "express": "^4.17.1",
-    "http-server": "^0.12.3",
-    "husky": "^4.2.5",
-    "japa": "^3.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "mrm": "^2.2.1",
-    "np": "^6.2.2",
-    "nyc": "^15.0.1",
-    "prettier": "^2.0.5",
-    "supertest": "^4.0.2",
-    "ts-node": "^8.9.0",
-    "typescript": "^3.8.3",
-    "uuidv4": "^6.1.1"
+    "@types/debug": "4.1.7",
+    "@types/jest": "27.0.1",
+    "@typescript-eslint/eslint-plugin": "4.31.0",
+    "@typescript-eslint/parser": "4.31.0",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-config-standard": "16.0.3",
+    "eslint-import-resolver-typescript": "2.4.0",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-promise": "5.1.0",
+    "eslint-plugin-standard": "5.0.0",
+    "husky": "7.0.2",
+    "jest": "27.1.0",
+    "lint-staged": "11.1.2",
+    "prettier": "2.3.2",
+    "ts-jest": "27.0.5",
+    "ts-loader": "9.2.3",
+    "ts-node": "10.0.0",
+    "tsconfig-paths": "3.9.0",
+    "typescript": "4.3.5"
   },
-  "author": "",
-  "license": "Unlicense",
-  "nyc": {
-    "exclude": [
-      "test"
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
     ],
-    "extension": [
-      ".ts"
+    "*.json": [
+      "prettier --write",
+      "git add"
     ]
   },
-  "main": "build/",
-  "types": "build/",
-  "files": [
-    "build",
-    "build/Responses/index.d.ts",
-    "build/Responses/index.js"
-  ],
   "husky": {
     "hooks": {
-      "pre-push": "yarn lint",
-      "commit-msg": "node ./node_modules/@adonisjs/mrm-preset/validateCommit/conventional/validate.js"
+      "pre-commit": "lint-staged"
     }
   },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
+  "jest": {
+    "modulePaths": [
+      "<rootDir>"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src",
+      "tests"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": ".",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all",
+    "arrowParens": "avoid",
+    "endOfLine": "lf",
+    "semi": false,
+    "printWidth": 80,
+    "overrides": [
+      {
+        "files": "test/**/*",
+        "options": {
+          "printWidth": 120
+        }
+      }
+    ]
+  },
+  "eslintConfig": {
+    "env": {
+      "es6": true,
+      "node": true
+    },
+    "extends": [
+      "standard",
+      "plugin:prettier/recommended"
+    ],
+    "globals": {
+      "use": true,
+      "Atomics": "readonly",
+      "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+      "ecmaVersion": 2018
+    },
+    "plugins": [
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": "error",
+      "camelcase": "off"
     }
   },
-  "np": {
-    "contents": ".",
-    "anyBranch": false
-  }
+  "files": [
+    "src/**/*.js",
+    "src/**/*.d.ts",
+    "index.js",
+    "index.d.ts"
+  ]
 }
