--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,24 @@
 {
-  "extends": "./node_modules/@adonisjs/mrm-preset/_tsconfig",
   "compilerOptions": {
-    "rootDir": "./src/",
-    "outDir": "build",
-    "strict": true,
+    "baseUrl": ".",
     "esModuleInterop": true,
+    "module": "commonjs",
+    "declaration": true,
+    "noImplicitAny": false,
+    "skipLibCheck": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": false,
+    "importHelpers": true,
+    "removeComments": false,
+    "noLib": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "es2017",
+    "sourceMap": false,
+    "allowJs": false,
+    "strict": true,
+    "strictNullChecks": false
   },
-  "include": ["src/**/*", "test/**/*"],
-  "exclude": ["node_modules", "build", "dist", "test"]
+  "include": ["*.ts", "**/*.ts"],
+  "exclude": ["node_modules", "build", "dist", "tests"]
 }
