--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsc",
     "test": "jest --verbose",
     "test:debug": "DEBUG=* jest --verbose",
-    "lint:fix": "eslint ./src --fix --ext=.ts"
+    "lint:fix": "eslint \"{src,tests}/**/*.ts\" --fix"
   },
   "dependencies": {},
   "devDependencies": {
@@ -98,22 +98,40 @@
     },
     "extends": [
       "standard",
+      "plugin:@typescript-eslint/recommended",
       "plugin:prettier/recommended"
     ],
     "globals": {
-      "use": true,
       "Atomics": "readonly",
       "SharedArrayBuffer": "readonly"
     },
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-      "ecmaVersion": 2018
+      "ecmaVersion": 2018,
+      "sourceType": "module"
     },
     "plugins": [
+      "@typescript-eslint",
       "prettier"
     ],
     "rules": {
+      "dot-notation": "off",
+      "camelcase": "off",
+      "no-undef": "off",
+      "@typescript-eslint/no-var-requires": "off",
+      "no-useless-constructor": "off",
+      "@typescript-eslint/no-useless-constructor": "off",
+      "@typescript-eslint/camelcase": "off",
+      "@typescript-eslint/explicit-module-boundary-types": "off",
+      "@typescript-eslint/interface-name-prefix": "off",
+      "@typescript-eslint/no-explicit-any": "off",
       "prettier/prettier": "error",
-      "camelcase": "off"
+      "@typescript-eslint/no-unused-vars": [
+        "error",
+        {
+          "argsIgnorePattern": "_"
+        }
+      ]
     }
   },
   "files": [
