--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules/
-dist/
+
 # Logs
 logs
 *.log
@@ -80,7 +80,6 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -121,3 +120,9 @@ dist
 .env
 .env.testing
 .env.production
+
+# Build files
+*.js
+*.d.ts
+dist
+build
